# JoyTalk

./: AGENTS.md  BUILD.md  CONTRIBUTING.md  CONTRIBUTING_TRANSLATIONS.md  Cargo.toml  README.md  flake.nix  index.html  package.json  tailwind.config.js  xhs-caption.md  xhs-post.html
.nix/: bun.nix  (+1 more)
crates/tauri-plugin-joycon/: Cargo.toml  build.rs
crates/tauri-plugin-joycon/permissions/: default.toml
crates/tauri-plugin-joycon/permissions/autogenerated/: allow-delete-profile.toml  allow-export-mappings.toml  allow-get-enabled.toml  allow-get-frontmost-app.toml  allow-get-frontmost.toml  allow-get-imu.toml  allow-get-ir-sample.toml  allow-get-ir.toml  allow-get-mappings.toml  allow-get-nfc-sample.toml  allow-get-per-app-enabled.toml  allow-get-preset-mappings.toml  allow-get-profiles.toml  allow-get-status.toml  allow-import-mappings.toml  allow-list-actions.toml  allow-list-apps.toml  allow-list-presets.toml  allow-load-preset-from-url.toml  allow-load-preset.toml  allow-reset-mappings.toml  allow-restart-nfc-scan.toml  allow-save-profile.toml  allow-set-enabled.toml  allow-set-imu.toml  allow-set-ir.toml  allow-set-mapping.toml  allow-set-per-app-enabled.toml  allow-start-capture.toml  allow-stop-capture.toml  reference.md
crates/tauri-plugin-joycon/permissions/schemas/: schema.json
crates/tauri-plugin-joycon/presets/: blank.json  default.json  meeting-mute.json  two-button-transcribe.json  vibe-coding.json  video-editing.json
crates/tauri-plugin-joycon/src/: actions.rs  commands.rs  injector.rs  lib.rs  listener.rs  presets.rs  settings.rs  state.rs  types.rs
(+139 files in other folders)
