[package]
name = "tauri-plugin-joycon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Tauri 2 plugin for Nintendo Switch Joy-Con: button mapping, hotkey actions, status events"
links = "tauri-plugin-joycon"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = "=2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
log = "0.4"
once_cell = "1"
joycon-rs = "0.6"
enigo = "0.6"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
